--- a/packages/plugin-vue/package.json
+++ b/packages/plugin-vue/package.json
@@ -42,6 +42,7 @@
     "@jridgewell/trace-mapping": "^0.3.25",
     "debug": "^4.3.5",
     "rollup": "^4.18.0",
+    "rolldown": "^0.12.2",
     "slash": "^5.1.0",
     "source-map-js": "^1.2.0",
     "vite": "/Users/likui/Github/rolldown-vite/packages/vite",
