--- a/packages/plugin-vue-jsx/package.json
+++ b/packages/plugin-vue-jsx/package.json
@@ -1,48 +1,26 @@
 {
-  "name": "@vitejs/plugin-vue-jsx",
-  "version": "4.0.0",
-  "license": "MIT",
-  "author": "Evan You",
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
-    }
-  },
-  "scripts": {
-    "dev": "unbuild --stub",
-    "build": "unbuild && pnpm run patch-cjs",
-    "patch-cjs": "tsx ../../scripts/patchCJS.ts",
-    "prepublishOnly": "npm run build"
-  },
-  "engines": {
-    "node": "^18.0.0 || >=20.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vitejs/vite-plugin-vue.git",
-    "directory": "packages/plugin-vue-jsx"
-  },
-  "bugs": {
-    "url": "https://github.com/vitejs/vite-plugin-vue/issues"
-  },
-  "homepage": "https://github.com/vitejs/vite-plugin-vue/tree/main/packages/plugin-vue-jsx#readme",
-  "dependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/plugin-transform-typescript": "^7.24.7",
-    "@vue/babel-plugin-jsx": "^1.2.2"
-  },
-  "devDependencies": {
-    "vite": "^5.2.12"
-  },
-  "peerDependencies": {
-    "vite": "^5.0.0",
-    "vue": "^3.0.0"
-  }
+	"dependencies": {
+		"@babel/plugin-transform-typescript": "^7.24.7",
+		"@vue/babel-plugin-jsx": "^1.2.2"
+	},
+	"devDependencies": {},
+	"exports": {
+		".": {
+			"import": "./dist/index.mjs",
+			"require": "./dist/index.cjs"
+		}
+	},
+	"files": [
+		"dist"
+	],
+	"main": "./dist/index.cjs",
+	"module": "./dist/index.mjs",
+	"name": "@vitejs/plugin-vue-jsx",
+	"scripts": {
+		"build": "unbuild && pnpm run patch-cjs",
+		"dev": "unbuild --stub",
+		"patch-cjs": "tsx ../../scripts/patchCJS.ts",
+		"prepublishOnly": "npm run build"
+	},
+	"types": "./dist/index.d.ts"
 }
