--- a/playground/package.json
+++ b/playground/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "@vitejs/vite-playground",
-  "private": true,
-  "version": "1.0.0",
-  "devDependencies": {
-    "@types/node": "^20.14.2",
-    "convert-source-map": "^2.0.0",
-    "css-color-names": "^1.0.1",
-    "kill-port": "^1.6.1",
-    "node-fetch": "^3.3.2",
-    "sirv": "^2.0.4"
-  }
+	"devDependencies": {
+		"@types/node": "^20.14.2",
+		"convert-source-map": "^2.0.0",
+		"css-color-names": "^1.0.1",
+		"kill-port": "^1.6.1",
+		"node-fetch": "^3.3.2",
+		"sirv": "^2.0.4"
+	},
+	"name": "@vitejs/vite-playground"
 }
