--- a/playground/ssr-vue/dep-import-type/package.json
+++ b/playground/ssr-vue/dep-import-type/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "@vitejs/test-dep-import-type",
-  "private": true,
-  "version": "0.0.0",
-  "main": "index.js"
+	"main": "index.js",
+	"name": "@vitejs/test-dep-import-type"
 }
