--- a/playground/ssr-vue/example-external-component/package.json
+++ b/playground/ssr-vue/example-external-component/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "@vitejs/test-example-external-component",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "main": "index.js"
+	"main": "index.js",
+	"name": "@vitejs/test-example-external-component"
 }
