--- a/playground/vue-jsx/package.json
+++ b/playground/vue-jsx/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "@vitejs/test-vue-jsx",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "debug": "node --inspect-brk vite",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.4.29"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "workspace:*",
-    "@vitejs/plugin-vue-jsx": "workspace:*"
-  }
+	"dependencies": {},
+	"devDependencies": {
+		"@vitejs/plugin-vue-jsx": "workspace:*"
+	},
+	"name": "@vitejs/test-vue-jsx",
+	"scripts": {
+		"build": "vite build",
+		"debug": "node --inspect-brk vite",
+		"dev": "vite",
+		"preview": "vite preview"
+	}
 }
