--- a/playground/vue-lib/package.json
+++ b/playground/vue-lib/package.json
@@ -1,17 +1,11 @@
 {
-  "name": "@vitejs/test-vue-lib",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev-consumer": "vite --config ./vite.config.consumer.ts",
-    "build-lib": "vite build --config ./vite.config.lib.ts",
-    "build-lib-css": "vite build --config ./vite.config.lib-css.ts",
-    "build-consumer": "vite build --config ./vite.config.consumer.ts"
-  },
-  "dependencies": {
-    "vue": "^3.4.29"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "workspace:*"
-  }
+	"dependencies": {},
+	"devDependencies": {},
+	"name": "@vitejs/test-vue-lib",
+	"scripts": {
+		"build-consumer": "vite build --config ./vite.config.consumer.ts",
+		"build-lib": "vite build --config ./vite.config.lib.ts",
+		"build-lib-css": "vite build --config ./vite.config.lib-css.ts",
+		"dev-consumer": "vite --config ./vite.config.consumer.ts"
+	}
 }
