--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
 	"devDependencies": {
-		"@babel/types": "^7.24.7",
-		"@types/convert-source-map": "^2.0.3",
-		"@types/debug": "^4.1.12",
-		"@types/fs-extra": "^11.0.4",
-		"@types/node": "^20.14.2",
-		"@types/resolve": "^1.20.6",
-		"@vitejs/release-scripts": "^1.3.1",
-		"conventional-changelog-cli": "^5.0.0",
-		"eslint-define-config": "^2.1.0",
-		"eslint-plugin-regexp": "^2.6.0",
-		"execa": "^9.2.0",
-		"fast-glob": "^3.3.2",
-		"fs-extra": "^11.2.0",
-		"lint-staged": "^15.2.7",
-		"npm-run-all2": "^6.2.0",
-		"picocolors": "^1.0.1",
-		"playwright-chromium": "^1.44.1",
-		"resolve": "^1.22.8",
-		"rollup-plugin-license": "^3.4.0",
-		"simple-git-hooks": "^2.11.1",
-		"tsx": "^4.15.5",
+		"@babel/types": "7.24.7",
+		"@types/convert-source-map": "2.0.3",
+		"@types/debug": "4.1.12",
+		"@types/fs-extra": "11.0.4",
+		"@types/node": "20.14.2",
+		"@types/resolve": "1.20.6",
+		"@vitejs/release-scripts": "1.3.1",
+		"conventional-changelog-cli": "5.0.0",
+		"eslint-define-config": "2.1.0",
+		"eslint-plugin-regexp": "2.6.0",
+		"execa": "9.2.0",
+		"fast-glob": "3.3.2",
+		"fs-extra": "11.2.0",
+		"lint-staged": "15.2.7",
+		"npm-run-all2": "6.2.0",
+		"picocolors": "1.0.1",
+		"playwright-chromium": "1.44.1",
+		"resolve": "1.22.8",
+		"rollup-plugin-license": "3.4.0",
+		"simple-git-hooks": "2.11.1",
+		"tsx": "4.15.5",
 		"unbuild": "2.0.0"
 	},
 	"lint-staged": {
