--- a/playground/ssr-vue/package.json
+++ b/playground/ssr-vue/package.json
@@ -1,13 +1,13 @@
 {
 	"dependencies": {
 		"@vitejs/test-example-external-component": "file:example-external-component",
-		"pinia": "^2.1.7"
+		"pinia": "2.1.7"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue-jsx": "workspace:*",
 		"@vitejs/test-dep-import-type": "link:dep-import-type",
-		"compression": "^1.7.4",
-		"serve-static": "^1.15.0"
+		"compression": "1.7.4",
+		"serve-static": "1.15.0"
 	},
 	"name": "@vitejs/test-ssr-vue",
 	"scripts": {
