--- a/playground/tailwind/package.json
+++ b/playground/tailwind/package.json
@@ -1,9 +1,9 @@
 {
 	"dependencies": {
-		"autoprefixer": "^10.4.19"
+		"autoprefixer": "10.4.19"
 	},
 	"devDependencies": {
-		"@types/node": "^20.14.2"
+		"@types/node": "20.14.2"
 	},
 	"name": "@vitejs/test-tailwind",
 	"scripts": {
