--- a/playground/vue-legacy/package.json
+++ b/playground/vue-legacy/package.json
@@ -1,7 +1,7 @@
 {
 	"dependencies": {},
 	"devDependencies": {
-		"@vitejs/plugin-legacy": "^5.4.1"
+		"@vitejs/plugin-legacy": "5.4.1"
 	},
 	"name": "@vitejs/test-vue-legacy",
 	"scripts": {
