--- a/playground/vue-sourcemap/package.json
+++ b/playground/vue-sourcemap/package.json
@@ -1,9 +1,9 @@
 {
 	"dependencies": {},
 	"devDependencies": {
-		"less": "^4.2.0",
-		"postcss-nested": "^6.0.1",
-		"sass": "^1.77.5"
+		"less": "4.2.0",
+		"postcss-nested": "6.0.1",
+		"sass": "1.77.5"
 	},
 	"name": "@vitejs/test-vue-sourcemap",
 	"scripts": {
