--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,13 @@
-hoist-pattern[]=postcss
-hoist-pattern[]=pug # playground/vue > @vue/compiler-sfc
-hoist-pattern[]=ts-node # playground/tailwind
+auto-install-peers=true
+hoist=true
+legacy-peer-deps=true
+link-workspace-packages=true
+node-linker=hoisted
+node_options=--max-old-space-size=32768
+prefer-frozen-lockfile=false
+prefer-workspace-packages=true
+shamefully-hoist=true
+shared-workspace-lockfile=true
 strict-peer-dependencies=false
-shell-emulator=true
-auto-install-peers=false
+unsafe-perm=true
+use-beta-cli=true
