--- a/packages/plugin-vue/package.json
+++ b/packages/plugin-vue/package.json
@@ -1,28 +1,28 @@
 {
-	"name": "@vitejs/plugin-vue",
-	"exports": {
-		".": {
-			"import": "./dist/index.mjs",
-			"require": "./dist/index.cjs"
-		}
-	},
-	"main": "./dist/index.cjs",
-	"module": "./dist/index.mjs",
-	"types": "./dist/index.d.ts",
-	"files": [
-		"dist"
-	],
-	"scripts": {
-		"build": "unbuild && pnpm run patch-cjs",
-		"dev": "unbuild --stub",
-		"patch-cjs": "tsx ../../scripts/patchCJS.ts",
-		"prepublishOnly": "npm run build"
-	},
 	"devDependencies": {
 		"@jridgewell/gen-mapping": "0.3.5",
 		"@jridgewell/trace-mapping": "0.3.25",
 		"debug": "4.3.7",
 		"slash": "5.1.0",
 		"source-map-js": "1.2.1"
-	}
+	},
+	"exports": {
+		".": {
+			"import": "./dist/index.mjs",
+			"require": "./dist/index.cjs"
+		}
+	},
+	"files": [
+		"dist"
+	],
+	"main": "./dist/index.cjs",
+	"module": "./dist/index.mjs",
+	"name": "@vitejs/plugin-vue",
+	"scripts": {
+		"build": "unbuild && pnpm run patch-cjs",
+		"dev": "unbuild --stub",
+		"patch-cjs": "tsx ../../scripts/patchCJS.ts",
+		"prepublishOnly": "npm run build"
+	},
+	"types": "./dist/index.d.ts"
 }
