--- a/playground/ssr-vue/example-external-component/package.json
+++ b/playground/ssr-vue/example-external-component/package.json
@@ -1,4 +1,4 @@
 {
-	"name": "@vitejs/test-example-external-component",
-	"main": "index.js"
+	"main": "index.js",
+	"name": "@vitejs/test-example-external-component"
 }
