--- a/playground/vue-lib/package.json
+++ b/playground/vue-lib/package.json
@@ -1,11 +1,11 @@
 {
+	"dependencies": {},
+	"devDependencies": {},
 	"name": "@vitejs/test-vue-lib",
 	"scripts": {
 		"build-consumer": "vite build --config ./vite.config.consumer.ts",
 		"build-lib": "vite build --config ./vite.config.lib.ts",
 		"build-lib-css": "vite build --config ./vite.config.lib-css.ts",
 		"dev-consumer": "vite --config ./vite.config.consumer.ts"
-	},
-	"dependencies": {},
-	"devDependencies": {}
+	}
 }
