--- a/playground/package.json
+++ b/playground/package.json
@@ -1,11 +1,11 @@
 {
 	"devDependencies": {
-		"@types/node": "^22.7.5",
-		"convert-source-map": "^2.0.0",
-		"css-color-names": "^1.0.1",
-		"kill-port": "^2.0.1",
-		"node-fetch": "^3.3.2",
-		"sirv": "^2.0.4"
+		"@types/node": "22.7.5",
+		"convert-source-map": "2.0.0",
+		"css-color-names": "1.0.1",
+		"kill-port": "2.0.1",
+		"node-fetch": "3.3.2",
+		"sirv": "2.0.4"
 	},
 	"name": "@vitejs/vite-playground"
 }
