--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
 	"devDependencies": {
-		"@babel/types": "^7.25.7",
-		"@types/convert-source-map": "^2.0.3",
-		"@types/debug": "^4.1.12",
-		"@types/fs-extra": "^11.0.4",
-		"@types/node": "^22.7.5",
-		"@types/resolve": "^1.20.6",
-		"@vitejs/release-scripts": "^1.3.2",
-		"conventional-changelog-cli": "^5.0.0",
-		"eslint-define-config": "^2.1.0",
-		"eslint-plugin-regexp": "^2.6.0",
-		"execa": "^9.4.0",
-		"fast-glob": "^3.3.2",
-		"fs-extra": "^11.2.0",
-		"lint-staged": "^15.2.10",
-		"npm-run-all2": "^6.2.3",
-		"picocolors": "^1.1.0",
-		"playwright-chromium": "^1.48.0",
-		"resolve": "^1.22.8",
-		"rollup-plugin-license": "^3.5.3",
-		"simple-git-hooks": "^2.11.1",
-		"tsx": "^4.19.1",
+		"@babel/types": "7.25.7",
+		"@types/convert-source-map": "2.0.3",
+		"@types/debug": "4.1.12",
+		"@types/fs-extra": "11.0.4",
+		"@types/node": "22.7.5",
+		"@types/resolve": "1.20.6",
+		"@vitejs/release-scripts": "1.3.2",
+		"conventional-changelog-cli": "5.0.0",
+		"eslint-define-config": "2.1.0",
+		"eslint-plugin-regexp": "2.6.0",
+		"execa": "9.4.0",
+		"fast-glob": "3.3.2",
+		"fs-extra": "11.2.0",
+		"lint-staged": "15.2.10",
+		"npm-run-all2": "6.2.3",
+		"picocolors": "1.1.0",
+		"playwright-chromium": "1.48.0",
+		"resolve": "1.22.8",
+		"rollup-plugin-license": "3.5.3",
+		"simple-git-hooks": "2.11.1",
+		"tsx": "4.19.1",
 		"unbuild": "2.0.0"
 	},
 	"lint-staged": {
