--- a/playground/tailwind/package.json
+++ b/playground/tailwind/package.json
@@ -1,9 +1,9 @@
 {
 	"dependencies": {
-		"autoprefixer": "^10.4.20"
+		"autoprefixer": "10.4.20"
 	},
 	"devDependencies": {
-		"@types/node": "^22.7.5"
+		"@types/node": "22.7.5"
 	},
 	"name": "@vitejs/test-tailwind",
 	"scripts": {
