--- a/packages/plugin-vue-jsx/package.json
+++ b/packages/plugin-vue-jsx/package.json
@@ -1,26 +1,26 @@
 {
-	"name": "@vitejs/plugin-vue-jsx",
+	"dependencies": {
+		"@babel/plugin-transform-typescript": "7.25.7",
+		"@vue/babel-plugin-jsx": "1.2.5"
+	},
+	"devDependencies": {},
 	"exports": {
 		".": {
 			"import": "./dist/index.mjs",
 			"require": "./dist/index.cjs"
 		}
 	},
-	"main": "./dist/index.cjs",
-	"module": "./dist/index.mjs",
-	"types": "./dist/index.d.ts",
 	"files": [
 		"dist"
 	],
+	"main": "./dist/index.cjs",
+	"module": "./dist/index.mjs",
+	"name": "@vitejs/plugin-vue-jsx",
 	"scripts": {
 		"build": "unbuild && pnpm run patch-cjs",
 		"dev": "unbuild --stub",
 		"patch-cjs": "tsx ../../scripts/patchCJS.ts",
 		"prepublishOnly": "npm run build"
 	},
-	"dependencies": {
-		"@babel/plugin-transform-typescript": "7.25.7",
-		"@vue/babel-plugin-jsx": "1.2.5"
-	},
-	"devDependencies": {}
+	"types": "./dist/index.d.ts"
 }
