--- a/playground/package.json
+++ b/playground/package.json
@@ -1,5 +1,4 @@
 {
-	"name": "@vitejs/vite-playground",
 	"devDependencies": {
 		"@types/node": "22.7.5",
 		"convert-source-map": "2.0.0",
@@ -7,5 +6,6 @@
 		"kill-port": "2.0.1",
 		"node-fetch": "3.3.2",
 		"sirv": "2.0.4"
-	}
+	},
+	"name": "@vitejs/vite-playground"
 }
